@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.345 2002/12/18 07:55:24 rh Exp $
+# $NetBSD: Makefile,v 1.346 2002/12/29 04:38:42 hubertf Exp $
 #
 
 COMMENT=	Networking tools
@@ -11,7 +11,6 @@ SUBDIR+=	ORBit
 SUBDIR+=	ORBit2
 SUBDIR+=	SDL_net
 SUBDIR+=	adns
-SUBDIR+=	agqt
 SUBDIR+=	airportbasestationconfig
 SUBDIR+=	archie
 SUBDIR+=	arla
